src/assets/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

.hourly-forecast-container {

    max-height: 265px; /* Adjust the height as needed */
    overflow-x: auto;
    overflow-y: auto;
    scrollbar-width: thin;
    scrollbar-color: darkgrey lightgrey;
  }
  
  .hourly-forecast-container::-webkit-scrollbar {
    width: 1px; /* Adjust the width of the scrollbar */
  }
  
  .hourly-forecast-container::-webkit-scrollbar-thumb {
    background-color: lightgrey; /* Color of the thumb */
    border-radius: 1px; /* Rounded corners for the thumb */
  }
  
  .hourly-forecast-container::-webkit-scrollbar-track {
    background-color: darkgrey; /* Color of the track */
  }

  @layer components {
    .bd-dfc {
      @apply bg-gradient-to-br from-blue-200 to-purple-200;
    }
    .current {
      @apply p-4 rounded-2xl font-bold border border-blue-400 shadow-md bg-blue-500
    }
    .current-wt {
      @apply flex flex-col items-start justify-between space-y-1 text-xs text-gray-300
    }
  }
  

